stylesheets/risky.css
/*
 * Undo the few default styles that clash with the game
 */
body {
  background-color: white; }

.title {
  border-bottom: none; }

/*
 * Based on the code pen by Elbarto https://codepen.io/elbarto84/pen/wrcob
 */
/* ----------------------------------------- */
.container {
  display: inline-block;
  line-height: 1.3;
  padding: 5px;
  margin: 5px;
  position: static;
  visibility: hidden; }

ol.even {
  position: relative;
  left: 1.8181818182em; }

ol.odd {
  position: relative; }

ol.point-to-point-up {
  margin-top: -18%; }

ol.point-to-point-down {
  margin-bottom: -18%; }

ol.face-to-face-up {
  margin-top: -25%; }

ol.face-to-face-down {
  margin-bottom: -25%; }

ol.nothing-down {
  margin-bottom: 0%; }

ol.nothing-up {
  margin-top: 0%; }

ol {
  visibility: hidden; }

.hex {
  position: relative;
  margin: 1em auto;
  width: 2em;
  height: 3.4em;
  border-radius: 0.4em;
  background: lightgreen;
  -webkit-transform: rotate(-90deg);
          transform: rotate(-90deg);
  display: inline-block;
  margin-right: 1.5384615385em;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  z-index: 100;
  visibility: visible; }

.hex:before, .hex:after {
  position: absolute;
  width: inherit;
  height: inherit;
  border-radius: inherit;
  background: inherit;
  content: ''; }

.hex:before {
  -webkit-transform: rotate(60deg);
          transform: rotate(60deg); }

.hex:after {
  -webkit-transform: rotate(-60deg);
          transform: rotate(-60deg); }

.hex:hover {
  cursor: pointer; }

.hex.blank {
  background: yellow;
  opacity: 0.1; }

.hex.blank:hover {
  cursor: auto; }

.hex.inner {
  background: lightyellow; }

.hex.water {
  background: lightskyblue; }

.hex.island {
  background: lightseagreen;
  margin-top: 0.5em;
  margin-bottom: 0.5em; }

.hex.highlight {
  width: 1.2em;
  margin-left: 0.5em; }

.hex.center.highlight {
  width: 3em; }

.hex.half {
  height: 2em; }

.selected-hex, .selected-hex::before, .selected-hex::after {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  border-top: 1px dashed black;
  border-bottom: 1px dashed black; }

/* Sections of map */
#map {
  width: 700px;
  height: 660px;
  position: relative;
  padding: 0; }

@media (max-width: 727px) {
  #map {
    overflow-x: auto;
    /* scroll on mobile */
    height: 680px;
    /* add some height to accomodate the horizontal scroll bar */ } }

.section {
  border: 1px solid black;
  /* make the div take up the size of its contents only */
  display: inline-block;
  /*
   * Absolutely position all divs with an origin of half their width
   * and at the bottom of their height.
   */
  position: absolute;
  -webkit-transform: translate(-50%, -100%);
          transform: translate(-50%, -100%);
  top: 50%;
  left: 50%;
  /* use the middle bottom to rotate each section */
  -webkit-transform-origin: 50% 100%;
          transform-origin: 50% 100%;
  visibility: hidden; }

.p1 {
  background-color: #c65c8a !important; }

.p2 {
  background-color: #694b98 !important; }

.p3 {
  background-color: #cd5148 !important; }

.p4 {
  background-color: #58a563 !important; }

.p5 {
  background-color: #aca535 !important; }

.p6 {
  background-color: #7d655e !important; }

#section0 {
  -webkit-transform: translate(-50%, -100%);
          transform: translate(-50%, -100%); }
  #section0 .content {
    -webkit-transform: rotate(90deg);
            transform: rotate(90deg); }
  #section0 .content.info {
    top: 20px;
    left: 5px; }
  #section0 .content.units {
    top: 10px;
    left: -5px; }

#section1 {
  -webkit-transform: translate(-50%, -100%) rotate(30deg);
          transform: translate(-50%, -100%) rotate(30deg); }
  #section1 .content {
    -webkit-transform: rotate(60deg);
            transform: rotate(60deg); }
  #section1 .content.info {
    top: 15px;
    left: 10px; }
  #section1 .content.units {
    top: 12px;
    left: -3px; }

#section2 {
  -webkit-transform: translate(-50%, -100%) rotate(60deg);
          transform: translate(-50%, -100%) rotate(60deg); }
  #section2 .content {
    -webkit-transform: rotate(30deg);
            transform: rotate(30deg); }
  #section2 .content.info {
    top: 8px;
    left: 12px; }
  #section2 .content.units {
    top: 12px;
    left: 0px; }

#section3 {
  -webkit-transform: translate(-50%, -100%) rotate(90deg);
          transform: translate(-50%, -100%) rotate(90deg); }
  #section3 .content {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg); }
  #section3 .content.info {
    top: 0px;
    left: 10px; }
  #section3 .content.units {
    top: 10px;
    left: 4px; }

#section4 {
  -webkit-transform: translate(-50%, -100%) rotate(120deg);
          transform: translate(-50%, -100%) rotate(120deg); }
  #section4 .content {
    -webkit-transform: rotate(-30deg);
            transform: rotate(-30deg); }
  #section4 .content.info {
    top: -7px;
    left: 5px; }
  #section4 .content.units {
    top: 4px;
    left: 4px; }

#section5 {
  -webkit-transform: translate(-50%, -100%) rotate(150deg);
          transform: translate(-50%, -100%) rotate(150deg); }
  #section5 .content {
    -webkit-transform: rotate(-60deg);
            transform: rotate(-60deg); }
  #section5 .content.info {
    top: -7px;
    left: -3px; }
  #section5 .content.units {
    top: 4px;
    left: 2px; }

#section6 {
  -webkit-transform: translate(-50%, -100%) rotate(180deg);
          transform: translate(-50%, -100%) rotate(180deg); }
  #section6 .content {
    -webkit-transform: rotate(-90deg);
            transform: rotate(-90deg); }
  #section6 .content.info {
    top: -5px;
    left: -12px; }
  #section6 .content.units {
    top: 4px;
    left: -2px; }

#section7 {
  -webkit-transform: translate(-50%, -100%) rotate(210deg);
          transform: translate(-50%, -100%) rotate(210deg); }
  #section7 .content {
    -webkit-transform: rotate(-120deg);
            transform: rotate(-120deg); }
  #section7 .content.info {
    top: 0px;
    left: -16px; }
  #section7 .content.units {
    top: 4px;
    left: -4px; }

#section8 {
  -webkit-transform: translate(-50%, -100%) rotate(240deg);
          transform: translate(-50%, -100%) rotate(240deg); }
  #section8 .content {
    -webkit-transform: rotate(-150deg);
            transform: rotate(-150deg); }
  #section8 .content.info {
    top: 8px;
    left: -20px; }
  #section8 .content.units {
    top: 4px;
    left: -6px; }

#section9 {
  -webkit-transform: translate(-50%, -100%) rotate(270deg);
          transform: translate(-50%, -100%) rotate(270deg); }
  #section9 .content {
    -webkit-transform: rotate(-180deg);
            transform: rotate(-180deg); }
  #section9 .content.info {
    top: 14px;
    left: -15px; }
  #section9 .content.units {
    top: 6px;
    left: -8px; }

#section10 {
  -webkit-transform: translate(-50%, -100%) rotate(300deg);
          transform: translate(-50%, -100%) rotate(300deg); }
  #section10 .content {
    -webkit-transform: rotate(-210deg);
            transform: rotate(-210deg); }
  #section10 .content.info {
    top: 20px;
    left: -10px; }
  #section10 .content.units {
    top: 8px;
    left: -8px; }

#section11 {
  -webkit-transform: translate(-50%, -100%) rotate(330deg);
          transform: translate(-50%, -100%) rotate(330deg); }
  #section11 .content {
    -webkit-transform: rotate(-240deg);
            transform: rotate(-240deg); }
  #section11 .content.info {
    top: 20px;
    left: -5px; }
  #section11 .content.units {
    top: 12px;
    left: -12px; }

#section12 .content {
  top: 50%;
  -webkit-transform: rotate(90deg) translate(-50%, -50%);
          transform: rotate(90deg) translate(-50%, -50%); }

#section12 .content.info {
  left: 25%;
  top: 60%; }

/* Centre hexagon */
.section.center {
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%); }

ol.center {
  margin: auto;
  padding: 0; }

.center.hex {
  text-align: left;
  width: 5em;
  height: 8.5em;
  border-radius: 0.8em;
  background: gold;
  margin: auto; }

/* Game info */
.hex .content {
  position: absolute;
  z-index: 100000;
  font-size: 8px;
  display: block;
  width: 5em;
  height: 5em; }

p.id {
  color: goldenrod;
  font-weight: bold; }

p.id.mid {
  color: yellow; }

/* Map SVG and layout */
/* position all parts of map in the same position as the map */
#walls, #paths, #territories, #mines, #castles {
  position: absolute;
  top: 0;
  left: 0;
  width: 700px;
  height: 660px; }

/* put walls and paths below territories */
#walls, #paths {
  z-index: -1000; }

/* put mines and castles over territories */
#mines, #castles {
  z-index: 100;
  /* hide the wrapper so territories can still be clicked */
  /*
   * This hidden parent visible children method stopped working
   * in Gecko and WebKit?
   */
  /* this works instead because we never need to click the dots */
  pointer-events: none;
  /*
  visibility: hidden;
  circle {
    visibility: visible;
  }
  */ }

#paths {
  background-color: cyan; }

#walls {
  opacity: 0.2; }

/* UI Sections */
#armies, #map, #info, #players, #mine-gold-income {
  display: block;
  margin: 5px;
  border: 1px solid black; }

@media (max-width: 933px) {
  /* remove margins once the ui collapses to a single column layout */
  #armies, #map, #info, #players, #mine-gold-income {
    margin: 0; } }

#armies, #info, #players, #mine-gold-income {
  padding: 5px; }
  #armies h2, #armies h3, #armies h4, #armies ol, #info h2, #info h3, #info h4, #info ol, #players h2, #players h3, #players h4, #players ol, #mine-gold-income h2, #mine-gold-income h3, #mine-gold-income h4, #mine-gold-income ol {
    margin: 5px 0; }
  #armies input[type='number'], #info input[type='number'], #players input[type='number'], #mine-gold-income input[type='number'] {
    width: 60px;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    border: 2px solid lightgrey;
    border-radius: 4px;
    margin: 2px;
    padding: 2px; }

#players {
  padding: 0 !important; }

#flex-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center; }

#armies {
  display: flex;
  flex-direction: column; }
  #armies ol {
    padding-left: 25px; }

#armies, #info {
  width: 200px; }
  #armies li, #armies ol, #info li, #info ol {
    visibility: visible; }

#armies-attack button {
  width: 100%; }

.buy {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap; }
  .buy p, .buy label, .buy input {
    margin: 5px 0;
    margin-right: 5px; }

#armies .hidden {
  visibility: hidden; }

#info-buttons {
  display: flex;
  flex-direction: column; }

#players ul {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  list-style-type: none;
  justify-content: center; }

.player-info {
  margin: 2px;
  padding: 2px; }

#turn-player-unit-upgrades {
  display: flex;
  flex-direction: column; }

#mine-gold-income {
  text-align: center;
  margin: auto;
  max-width: 1000px; }
  #mine-gold-income ol {
    visibility: visible; }

#tutorial {
  text-align: center; }
  #tutorial article {
    margin: auto; }
    #tutorial article p, #tutorial article li {
      text-align: left; }

/* Start selection */
#choose-start button {
  width: 100%; }

#choose-start.hidden {
  display: none; }

#bot-controls {
  display: flex;
  flex-direction: column;
  text-align: center; }

